--- a/public/assets/portal/css/sports/betslip.css
+++ b/public/assets/portal/css/sports/betslip.css
@@ -81,6 +81,7 @@
     background: none;
     color: #497d92;
     border: none;
+    margin-top: 5px;
 }
 
 .betslip-text {
@@ -96,10 +97,11 @@
 .betslip-text.gameName {
     font-size: 12px;
     color: #99ccff;
+    line-height: 120%;
 }
 
 .betslip-text.marketName {
-    font-size: 12px;
+    font-size: 14px;
     color: #FFF;
 }
 
@@ -141,7 +143,6 @@
     width: 100%;
     height: 42px;
     border: 0;
-    border-radius: 0 0 0 5px;
 }
 
 .betslip-button.submit {
