--- a/public/assets/portal/css/sports/markets.css
+++ b/public/assets/portal/css/sports/markets.css
@@ -78,7 +78,6 @@
     width: 1px;
 }
 
-
 .markets-th.marketCount {
     background-color: #1e293e;
     width: 50px;
@@ -136,7 +135,7 @@
 }
 
 .markets-td.selection.odd {
-    background-color: #607d8b;
+    background-color: #536883;
 }
 
 
