--- a/public/assets/portal/css/sports/betslip.css
+++ b/public/assets/portal/css/sports/betslip.css
@@ -78,7 +78,7 @@
     float: right;
     font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
     font-weight: bold;
-    font-size: 10px;
+    font-size: 12px;
     background: none;
     color: #497d92;
     border: none;
@@ -186,4 +186,14 @@
     font-size: 12px;
     color: #99ccff;
     vertical-align: middle;
+}
+
+.betslip-icon-tab.inactive {
+    font-size: 14px;
+    color: #99ccff;
+}
+
+.betslip-icon-tab.active {
+    font-size: 18px;
+    color: #ff9900;
 }
