Nº de mercados clicável fixed: #27

--- a/resources/assets/sass/sports/markets.scss
+++ b/resources/assets/sass/sports/markets.scss
@@ -129,6 +129,7 @@
     font-size: 14px;
     background-color: #2d415c;
     color: #99ccff;
+    cursor: pointer;
 }
 
 .markets-td.date.even, .markets-td.game.even, .markets-td.favorite.even,
