--- a/resources/assets/sass/sports/betslip.scss
+++ b/resources/assets/sass/sports/betslip.scss
@@ -126,6 +126,11 @@
     color: #ffcc00;
 }
 
+.betslip-icon-loss {
+    font-size: 16px;
+    color: #ff3300;
+}
+
 .betslip-text.win {
     font-size: 16px;
     color: #99cc00;
