WIP - Modificando design.

--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -1,3 +1,9 @@
+.font-title {
+  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif; }
+
+.font-text, .markets-th-market-selection {
+  font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif; }
+
 .betslip-container {
   float: left;
   color: #fff;
@@ -179,7 +185,7 @@
   min-height: 600px;
   color: #fff;
   width: 640px;
-  margin: 8px 10px; }
+  margin: 0 10px; }
 
 .markets-box.navigation {
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
@@ -207,8 +213,27 @@
   text-align: center;
   border-radius: 20px; }
 
+.markets-table-market {
+  border: 1px solid #4a7fb3; }
+
 .markets-tr {
   height: 42px; }
+
+.markets-tr-market-header {
+  height: 25px;
+  background-color: #2d405c; }
+
+.markets-th-market-selection {
+  color: #99ccff;
+  font-weight: normal;
+  font-size: 14px;
+  width: 213px; }
+
+.markets-th-market-separator {
+  width: 1px; }
+
+.markets-td-market-separator {
+  background-color: #2d405c; }
 
 .markets-tr.fixtures.header {
   background-color: #1e293e; }
@@ -343,18 +368,18 @@
   /*border: 2px solid #ff9900;*/
   border-radius: 5px; }
 
-.markets-box.market.title {
+.markets-box-market-title {
+  font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+  font-size: 16px;
+  line-height: 42px;
   margin-top: 5px;
   height: 42px;
-  color: #99ccff;
-  background-color: #1e293e;
-  padding: 20px 10px 0 20px; }
+  color: #FFF;
+  background-color: #4a7fb3;
+  padding: 0 20px; }
 
-.markets-th, .markets-text.market.title {
+.markets-th {
   font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif; }
-
-.markets-text.market.title {
-  font-size: 18px; }
 
 .markets-th {
   font-size: 16px; }
@@ -368,7 +393,6 @@
   padding: 0 10px 0 20px; }
 
 .markets-th.selection.triple {
-  width: 137px;
   background-color: #1e293e; }
 
 .markets-th.selection.double {
